# incrupdate

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/a021054970/incrupdate/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bsdiff.c  bspatch.c  native-lib.cpp
app/src/main/java/com/example/a021054970/incrupdate/: MainActivity.java  PathUtils.java
app/src/main/res/layout/: content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/a021054970/incrupdate/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
